Application Template Splash Screen image is not loading as expected #70812

Closed
opened 2019-10-14 16:45:29 +02:00 by Dharma Teja Reddy Kasa · 3 comments

System Information
Operating system: Linux-5.0.0-31-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26

Blender Version
Application Template splash screen is not working

Short description of error
I installed my application template. I created it by following steps mentioed in oddicial 2.8 doc : https://docs.blender.org/manual/en/latest/advanced/app_templates.html
Startup scene loaded as expected but splash screen image isn't effected. Template is attached here : MyAppTemplate.zip

I checked console to check if I did anything wrong. Console gave following error

ERROR (wm.operator): /home/sources/blender-release/source/blender/windowmanager/intern/wm_operators.c:1621 wm_block_splash_image: Splash expected 1002x250 found 1002x564, ignoring: /home/dharma/.config/blender/2.80/scripts/startup/bl_app_templates_user/Dmw/splash_2x.png

I tried to replace splash_2x.png with 1002x250 as per console log. On loading blender with template, this is splash screen image I got
bugSplash.png

Exact steps for others to reproduce the error

  1. Install template given in ticket (or your own template)
  2. Launch blender with command blender --app-template [TEMPLATE_NAME} (or) Launch it normally, open template, open splash screen.
  3. In console, you can see log provided above
  4. Replace splash_2x.png with any image with 1002x250 dimentions to see how splash screen is split into half with default one
**System Information** Operating system: Linux-5.0.0-31-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26 **Blender Version** Application Template splash screen is not working **Short description of error** I installed my application template. I created it by following steps mentioed in oddicial 2.8 doc : https://docs.blender.org/manual/en/latest/advanced/app_templates.html Startup scene loaded as expected but splash screen image isn't effected. Template is attached here : [MyAppTemplate.zip](https://archive.blender.org/developer/F7816864/MyAppTemplate.zip) I checked console to check if I did anything wrong. Console gave following error ``` ERROR (wm.operator): /home/sources/blender-release/source/blender/windowmanager/intern/wm_operators.c:1621 wm_block_splash_image: Splash expected 1002x250 found 1002x564, ignoring: /home/dharma/.config/blender/2.80/scripts/startup/bl_app_templates_user/Dmw/splash_2x.png ``` I tried to replace splash_2x.png with 1002x250 as per console log. On loading blender with template, this is splash screen image I got ![bugSplash.png](https://archive.blender.org/developer/F7816872/bugSplash.png) **Exact steps for others to reproduce the error** 1. Install template given in ticket (or your own template) 2. Launch blender with command `blender --app-template [TEMPLATE_NAME}` (or) Launch it normally, open template, open splash screen. 3. In console, you can see log provided above 4. Replace splash_2x.png with any image with 1002x250 dimentions to see how splash screen is split into half with default one

Added subscriber: @DharmaTejaReddyK

Added subscriber: @DharmaTejaReddyK

This issue was referenced by 46102cf4e0

This issue was referenced by 46102cf4e0c4a868d82294bede213a6e282842ca

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-10-15 05:19:54 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70812
No description provided.